crates/plotnik-lib/tests/05-typegen/alternations/error_multi_element_branch_no_captures.txt
Bad = [
  (identifier)
  {
    (number)
    (string)
  }
]* @items
==== diagnostics ====
error: this `*` group matches several nodes but captures none of them
 --> query.ptk:1:7
  |
1 |   Bad = [
  |  _______^
2 | |   (identifier)
3 | |   {
4 | |     (number)
... |
7 | | ]* @items
  | |__^
  |
help: add internal captures: `{(a) @a (b) @b}* @items`
